--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
+    "@date-io/date-fns": "^2.11.0",
     "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.7.1",
     "@emotion/server": "^11.4.0",
@@ -35,6 +36,7 @@
     "@mui/lab": "^5.0.0-alpha.59",
     "@mui/material": "^5.2.3",
     "@mui/system": "^5.2.3",
+    "date-fns": "^2.27.0",
     "draft-js": "^0.11.7",
     "graphql": "^16.1.0",
     "next": "^12.0.7",
@@ -42,6 +44,7 @@
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-hot-toast": "^2.1.1",
     "simplebar-react": "^2.3.6",
     "typescript": "^4.5.4",
